picar_ros2_ws/src/log/build_2023-04-14_12-00-51/picar_sys/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/willwu/Capstone-2023/picar_ros2_ws/src/install/picar_sys/lib/python3.10/site-packages/drivers/gps_driver.py", line 38
    continue
    ^^^^^^^^
SyntaxError: 'continue' not properly in loop

